SG-2004-07-29-0: Bugfix:    Resending queue signals broken
                 Changed:   exed, qmaster
                 Issue:     1178
                 Bugtraq:   5079572
                 Review:    EB

CR-2004-07-28-1  Bugfix:    - Startup of qmaster changes act_qmaster to 
                              `hostname`,
                            - Two network cards in exec host: creates wrong 
                              directory / shutdown fails
                 Bugtraq:   5071522, 5079514
                 Issue:     1110, 1113
                 Changed:   install scripts, shadowd, gdi lib
                 Review:    RH

JG-2004-07-29-0: Bugfix:    qrsh starter didn't output reason (strerror), if it
                            couldn't write its pid file.
                 Testsuite: Make test functional/tight_integration use all hosts
                            of the testcluster.
                            Use category VERIFIED as default.
                 Changed:   qrsh_starter, testsuite
                 Review:    CR

AA-2004-07-28-1: Bugfix:    qmon's queue filtering doesn't work
                 Bugtraq:   5075936
                 Changed:   qmon
                 Review:    RH

AA-2004-07-28-0: Bugfix:    Wallclock time limit in qmon
                 Bugtraq:   5078783
                 Issue:     1162
                 Changed:   qmon
                 Review:    CR

SG-2004-07-28-0: Bugfix:    - fixed the event master theading problem
                            - fixed the job names and accouting string evaluation.
                            - removed an abort in qmaster, when sched conf was not
                              valid.
                 Bugtraq:   5075849
                 Issue:     1099
                 Changed:   qmaster, submit.1
                 Review:    JG

DT-2004-07-27-0: Enhancem.: o Finished enhancing DRMAA Java language binding
                              docs